[package]
name = "rusts_algo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmap = "0.1.0"
anyhow = "1.0.13"
clap = { version = "3.1.18", features = ["derive"] }
multiarray = "0.1.3"
derive_more = "0.99.17"
num = "0.4.0"