[package]
name = "rusts_algo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmap = "0.1.0"
anyhow = "1.0.69"
clap = { version = "3.1.18", features = ["derive"] }
float-cmp = "0.9.0"
hashmap_macro = "0.1.0"
regex = "1.7.0"
multiarray = "0.1.3"
derive_more = "0.99.17"
ndarray = "0.15.6"
num = "0.4.0"
num_cpus = "1.13.1"
rand = "0.8.5"

